--- a/templates/html_guess.html
+++ b/templates/html_guess.html
@@ -5,7 +5,7 @@
     <title>Guess the number</title>
 </head>
 <body>
-<h4>It is number {{ guess }}</h4>
+<h4>It is number {{ guess_ }}</h4>
 <form method="POST">
     <label>
         <input type="submit" name="too_small" value="Too small">
@@ -16,8 +16,9 @@
     <label>
         <input type="submit" name="you_win" value="You win">
     </label>
-    <input name="min" value="{{ min_ }}">
-    <input name="max" value="{{ max_ }}">
+    <input type="hidden" name="min" value="{{ min_ }}">
+    <input type="hidden" name="max" value="{{ max_ }}">
+    <input type="hidden" name="guess_" value="{{ guess_ }}">
 </form>
 </body>
 </html>
